<resources>
    <string name="app_name">Signal</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferencesActivity_currently_s">Currently: %s</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">1 message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_passphrase">Disable passphrase?</string>
    <string name="ApplicationPreferencesActivity_this_will_permanently_unlock_signal_and_message_notifications">This will permanently unlock Signal and message notifications.</string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_unregistering">Unregistering</string>
    <string name="ApplicationPreferencesActivity_unregistering_from_signal_messages_and_calls">Unregistering from Signal messages and calls...</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls">Disable Signal messages and calls?</string>
    <string name="ApplicationPreferencesActivity_disable_signal_messages_and_calls_by_unregistering">Disable Signal messages and calls by unregistering from the server. You will need to re-register your phone number to use them again in the future.</string>
    <string name="ApplicationPreferencesActivity_error_connecting_to_server">Error connecting to server!</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">SMS Enabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_change_your_default_sms_app">Touch to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">SMS Disabled</string>
    <string name="ApplicationPreferencesActivity_touch_to_make_signal_your_default_sms_app">Touch to make Signal your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms_mms_summary">SMS %1$s, MMS %2$s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase %1$s, Screen security %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="DraftDatabase_Draft_location_snippet">(location)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentTypeSelectorAdapter_camera">Camera</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="AttachmentTypeSelectorAdapter_contact">Contact info</string>
    <string name="AudioSlidePlayer_error_playing_audio">Error playing audio!</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="CallScreen_Incoming_call">Incoming call</string>
    <string name="ConfirmIdentityDialog_the_signature_on_this_key_exchange_is_different">The
        identifying key material for %1$s has changed. This could either mean that someone is trying to
        intercept your communication, or that %2$s simply re-installed Signal and now has a new
        identity key.
    </string>
    <string name="ConfirmIdentityDialog_you_may_wish_to_verify_this_contact">You may wish to verify
        this contact.
    </string>
    <string name="ConfirmIdentityDialog_accept">Accept</string>
    <string name="ContactsDatabase_message_s">Message %s</string>
    <string name="ContactsDatabase_signal_call_s">Signal Call %s</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_not_delivered">Not delivered</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to storage. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Error, received stale key exchange message.</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_for_details">Tap for details</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Tap for unsecured fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">This message will <b>not</b> be encrypted because the recipient is no longer a Signal user.\n\nSend unsecured message?</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_from_s">from %s</string>
    <string name="ConversationItem_to_s">to %s</string>
    <string name="ConversationActivity_reset_secure_session_question">Reset secure session?</string>
    <string name="ConversationActivity_this_may_help_if_youre_having_encryption_problems">This may help if you\'re having encryption problems in this conversation. Your messages will be kept.</string>
    <string name="ConversationActivity_reset">Reset</string>
    <string name="ConversationActivity_delete_thread_question">Delete conversation?</string>
    <string name="ConversationActivity_this_will_permanently_delete_all_messages_in_this_conversation">This will permanently delete all messages in this conversation.</string>
    <string name="ConversationActivity_add_attachment">Add attachment hey hey</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_setting_your_attachment">Sorry, there was an error setting your attachment.</string>
    <string name="ConversationActivity_the_gif_you_selected_was_too_big">The gif you selected was too big!</string>
    <string name="ConversationActivity_sorry_the_selected_video_exceeds_message_size_restrictions">Sorry, the selected video exceeds message size restrictions (%1$skB).</string>
    <string name="ConversationActivity_sorry_the_selected_audio_exceeds_message_size_restrictions">Sorry, the selected audio exceeds message size restrictions (%1$skB).</string>
    <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">Recipient is not a valid SMS or email address!</string>
    <string name="ConversationActivity_message_is_empty_exclamation">Message is empty!</string>
    <string name="ConversationActivity_group_members">Group members</string>
    <string name="ConversationActivity_group_conversation">Group conversation</string>
    <string name="ConversationActivity_unnamed_group">Unnamed group</string>
    <plurals name="ConversationActivity_d_recipients_in_group">
        <item quantity="one">1 member</item>
        <item quantity="other">%d members</item>
    </plurals>
    <string name="ConversationActivity_saved_draft">Saved draft</string>
    <string name="ConversationActivity_invalid_recipient">Invalid recipient!</string>
    <string name="ConversationActivity_calls_not_supported">Calls not supported</string>
    <string name="ConversationActivity_this_device_does_not_appear_to_support_dial_actions">This device does not appear to support dial actions.</string>
    <string name="ConversationActivity_leave_group">Leave group?</string>
    <string name="ConversationActivity_are_you_sure_you_want_to_leave_this_group">Are you sure you want to leave this group?</string>
    <string name="ConversationActivity_transport_insecure_sms">Insecure SMS</string>
    <string name="ConversationActivity_transport_insecure_mms">Insecure MMS</string>
    <string name="ConversationActivity_transport_signal">Signal</string>
    <string name="ConversationActivity_lets_switch_to_signal">Let\'s switch to Signal %1$s</string>
    <string name="ConversationActivity_lets_use_this_to_chat">Let\'s use this to chat: %1$s</string>
    <string name="ConversationActivity_error_leaving_group">Error leaving group...</string>
    <string name="ConversationActivity_mms_not_supported_title">MMS not supported</string>
    <string name="ConversationActivity_mms_not_supported_message">This message cannot be sent since your carrier doesn\'t support MMS.</string>
    <string name="ConversationActivity_specify_recipient">Please choose a contact</string>
    <string name="ConversationActivity_unblock_question">Unblock?</string>
    <string name="ConversationActivity_are_you_sure_you_want_to_unblock_this_contact">Are you sure you want to unblock this contact?</string>
    <string name="ConversationActivity_unblock">Unblock</string>
    <string name="ConversationActivity_attachment_exceeds_size_limits">Attachment exceeds size limits for the type of message you\'re sending.</string>
    <string name="arrays__import_export">Import / export</string>
    <string name="arrays__show_all_delayed_messages">Show all delayed messages</string>
    <string name="text_secure_normal__menu_new_group">New group</string>
    <string name="text_secure_normal__menu_settings">Settings</string>
    <string name="text_secure_normal__menu_clear_passphrase">Lock</string>
    <string name="text_secure_normal__mark_all_as_read">Mark all read</string>
    <string name="text_secure_normal__invite_friends">Invite friends</string>
    <string name="text_secure_normal__help">Help</string>
    <string name="conversation__menu_groups">Groups</string>
    <string name="title_activity_archive">Archive</string>
    <string name="SendToArchive">Send to archive</string>
</resources>